# foundry-fn-python

./: .gitignore  CITATION.cff  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/complex_inputs/: README.md  complex_inputs_example.py  manifest.yml
examples/complex_inputs/functions/complex_input_tester/: main.py  request_schema.json  requirements.txt  response_schema.json  test.sh
src/crowdstrike/foundry/: __init__.py
src/crowdstrike/foundry/function/: __init__.py  config_loader.py  config_loader_fs.py  context.py  cslogger.py  falconpy.py  handler.py  handler_base.py  loader.py  logger.py  mapping.py  model.py  router.py  runner.py  runner_cli.py  runner_http.py
test_data/config/: valid.json
test_data/requests/: cli_request1.json  cli_request2.json  cli_request3.json  cli_request4.json  cli_request5.json  cli_request6.json
tests/: __init__.py
tests/crowdstrike/foundry/function/: test__init__.py  test_cli_runner.py  test_config_loader.py  test_cslogger.py  test_falconpy.py  test_handler.py  test_logger.py  test_mapping.py  test_model.py  test_request_lifecycle.py  utils.py
